Fix news rendering on mobile, tweak navbar colors

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -21,9 +21,9 @@ $link-hover: darken($link, 10%);
 $container-max-width: 800px;
 
 $light-gray: #e1e1db;
-$navbar-background-color: lighten($light-gray, 8%);
-$border: lighten($light-gray, 3%);
+$navbar-background-color: lighten($light-gray, 10%);
+$border: lighten($light-gray, 7%);
 $navbar-item-hover-color: $navbar-item-color;
 $navbar-item-hover-background-color: $border;
 
-$card-content-background-color: lighten($light-gray, 11.5%);
+$card-content-background-color: lighten($light-gray, 10%);
